include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
set(BACKEND_EXETUABLE_NAME "zts-core")
if(OJ_TEST_BACKEND)
  set(BACKEND_EXETUABLE_NAME "code")
endif()
add_executable(${BACKEND_EXETUABLE_NAME} main.cpp engine.cpp utils.cpp data.cpp user_system.cpp train_system.cpp transaction_system.cpp)
target_link_libraries(${BACKEND_EXETUABLE_NAME} argparse)
target_link_libraries(${BACKEND_EXETUABLE_NAME} spdlog::spdlog)
target_link_libraries(${BACKEND_EXETUABLE_NAME} sockpp)
target_link_libraries(${BACKEND_EXETUABLE_NAME} storage)
target_link_libraries(${BACKEND_EXETUABLE_NAME} dataguard)
set_target_properties(${BACKEND_EXETUABLE_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})