if(OJ_TEST_BPT)
  add_executable(code oj_test_interface_for_bpt.cpp)
  target_link_libraries(code bpt)
  set_target_properties(code PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
endif()
add_executable(replacer_test replacer_test.cpp)
target_link_libraries(replacer_test bpt GTest::gtest_main)
add_executable(buffer_pool_manager_test buffer_pool_manager_test.cpp)
target_link_libraries(buffer_pool_manager_test bpt GTest::gtest_main)
add_executable(page_guard_test page_guard_test.cpp)
target_link_libraries(page_guard_test bpt GTest::gtest_main)
add_executable(bpt_basic_test bpt_basic_test.cpp)
target_link_libraries(bpt_basic_test bpt GTest::gtest_main)